--- a/condorai/src/App.css
+++ b/condorai/src/App.css
@@ -1,24 +1,24 @@
 .app-container {
-  font-family: 'Helvetica', Times, serif, sans-serif;
+  font-family: 'Montserrat', sans-serif;
   background-color: #fcf8f5;
   min-height: 100vh;
 }
 
 .app-header {
-  background-color: #470d0d;
-  color: white;
+  color: #470d0d;
   padding: 1rem;
-  font-size: 1.5rem;
+  font-size: 3rem;
   font-weight: bold;
   text-align: center;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .main-section {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center; /* vertically centers the content */
-  min-height: calc(100vh - 80px); /* subtract header height */
+  justify-content: center; 
+  /* min-height: calc(100vh - 80px); */
 }
 
 
@@ -42,6 +42,7 @@
   padding: 0.6rem 1rem;
   border-radius: 6px;
   cursor: pointer;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .device-table {
@@ -79,4 +80,31 @@
   background-color: #f4e8e8;
   transform: scale(1.01);
   transition: 0.2s ease-in-out;
+}
+
+/* delete button css */
+.icon-button {
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  padding: 6px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 6px;
+  transition: background-color 0.2s ease, transform 0.2s ease;
+}
+
+.icon-button svg {
+  color: black; 
+  font-size: 1.2rem;
+  transition: color 0.2s ease;
+}
+
+.icon-button:hover {
+  transform: scale(1.05);
+}
+
+.icon-button:hover svg {
+  color: #cc1f1a;
 }
